install sfbay handcoded site
copied playbooks into role, now we can set up arbitrary numbers of handcoded websites

--- a/roles/sunrise/templates/Caddyfile.j2
+++ b/roles/sunrise/templates/Caddyfile.j2
@@ -34,3 +34,9 @@ ri.sunrisemovement.dev {
 	import boilerplate
 	php_fastcgi unix//var/run/php/php7.3-fpm.sock
 }
+
+# handcoded SF Bay website (originally Github Pages)
+sfbay.sunrisemovement.dev {
+	root * /srv/sunrisemovement.dev/sfbay/public
+	import boilerplate
+}
