move test site into www folder

--- a/roles/sunrise/templates/Caddyfile.j2
+++ b/roles/sunrise/templates/Caddyfile.j2
@@ -17,7 +17,7 @@
 
 # test page
 www.sunrisemovement.dev {
-	root * /srv/sunrisemovement.dev/public/
+	root * /srv/sunrisemovement.dev/www/public/
 #	try_files {path}.html {path}
 	import boilerplate
 }
