got test server working using Caddy's local CA
I renamed some files, because we may have multiple kinds of testing, e.g. testing with a local CA, then testing with Let's Encrypt's staging environment.

Here we are using Caddy's built-in local CA to sign certificates, so we can use HTTPS just as we do in production.

I made the test webpage use both Caddy templates and Ansible templates to display different variables, to make it easier to debug any problems.

Some details in the Caddy forum at https://caddy.community/t/v2-how-to-test-caddyfile-etc-before-deploying-to-production/7495

I also began setting up a way to install packages at the beginning of the main tasks file, instead of piecemeal throughout.

--- a/roles/sunrise/templates/Caddyfile.j2
+++ b/roles/sunrise/templates/Caddyfile.j2
@@ -18,8 +18,10 @@
 # test page
 www.sunrisemovement.dev {
 	root * /srv/sunrisemovement.dev/www/public/
-#	try_files {path}.html {path}
 	import boilerplate
+	templates {
+		between (( ))
+	}
 }
 
 # redirect no-www to www
