--- a/roles/sunrise/templates/index.html.j2
+++ b/roles/sunrise/templates/index.html.j2
@@ -7,6 +7,7 @@
     <title>Test Page</title>
   </head>
   <body>
-    This is a test. This is only a test.
+    <p>Welcome to ((.Host)). The time is ((now | date "15:04:05 MST")) on ((now | date "Monday January 2, 2006")). Your IP is ((.RemoteIP)).</p>
+    <p>This server, named {{ local_hostname }}, is running the {{ ansible_distribution }} distribution in the {{ ansible_os_family }} OS family.</p>
   </body>
 </html>
