added links to documentation

--- a/roles/sunrise/templates/Caddyfile.j2
+++ b/roles/sunrise/templates/Caddyfile.j2
@@ -1,4 +1,4 @@
-# global options block
+# global options block: https://caddyserver.com/docs/caddyfile/options
 {
 	storage file_system {
 		root	/etc/caddy/storage
@@ -7,7 +7,7 @@
 	email 	{{ admin_email }}
 }
 
-# reusable snippets
+# reusable snippets: https://caddyserver.com/docs/caddyfile/concepts#snippets
 (boilerplate) {
 	encode gzip zstd
 	file_server
@@ -19,11 +19,12 @@
 www.sunrisemovement.dev {
 	root * /srv/sunrisemovement.dev/www/public/
 	import boilerplate
+	# https://caddyserver.com/docs/caddyfile/directives/templates
+	# can't use default double curly braces b/c Ansible uses them
 	templates {
 		between (( ))
 	}
 }
-
 # redirect no-www to www
 sunrisemovement.dev {
 	redir https://www.sunrisemovement.dev
