further attempts to make Hugo work
I got rid of the separate Hugo vars file, merged that into main.

We're stuck on the step where we decide which sites need to be re-generated using Hugo.

--- a/roles/sunrise/templates/Caddyfile.j2
+++ b/roles/sunrise/templates/Caddyfile.j2
@@ -37,7 +37,7 @@ ri.sunrisemovement.dev {
 	php_fastcgi unix/{{ php_fpm_unix_socket }}
 }
 
-# handcoded SF Bay website (originally Github Pages)
+# Hugo SF Bay website
 sfbay.sunrisemovement.dev {
 	root * /srv/sunrisemovement.dev/sfbay/public
 	import boilerplate
