fixed site root dir + permissions
websites weren't loading due to the Caddyfile looking in the wrong directory

--- a/roles/sunrise/templates/Caddyfile.j2
+++ b/roles/sunrise/templates/Caddyfile.j2
@@ -47,7 +47,13 @@ sfbay.sunrisemovement.org {
 	import boilerplate
 }
 
+# Hugo sites
 philadelphia.sunrisemovement.dev {
 	root * /srv/sunrisemovement.dev/philadelphia/public
+	import boilerplate
+}
+
+houston.sunrisemovement.dev {
+	root * /srv/sunrisemovement.dev/houston/public
 	import boilerplate
 }
