got SFbay site working on brockovich
Some info at https://github.com/sunrisemovement/devops/issues/13

Note how I default to omitting undefined variables in new_handcoded.yml so that they'll have the Ansible default values. Of course, we could just define all of the variables...

We're going to have to rename "handcoded_websites" because this was made using Hugo, just not a copy of Hugo running on our server :-P

--- a/roles/sunrise/templates/LocalCaddyfile.j2
+++ b/roles/sunrise/templates/LocalCaddyfile.j2
@@ -47,6 +47,12 @@ ri.sunrisemovement.dev {
 	php_fastcgi unix/{{ php_fpm_unix_socket }}
 }
 
+# Hugo SF Bay website
+sfbay.sunrisemovement.org {
+	root * /srv/sunrisemovement.org/sfbay/public
+	import boilerplate
+}
+
 # Hugo sites
 philadelphia.sunrisemovement.dev {
 	root * /srv/sunrisemovement.dev/philadelphia/public
