--- a/roles/sunrise/templates/index.html.j2
+++ b/roles/sunrise/templates/index.html.j2
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Minimal HTML page to test whether this web server works.">
-    <title>Test Page</title>
-  </head>
-  <body>
-    <p>Welcome to ((.Host)). The time is ((now | date "15:04:05 MST")) on ((now | date "Monday January 2, 2006")). Your IP is ((.RemoteIP)).</p>
-    <p>This server, named {{ ansible_hostname }}, is running the {{ ansible_distribution }} distribution in the {{ ansible_os_family }} OS family.</p>
-  </body>
-</html>
+<html lang=en>
+
+<meta charset=utf-8>
+<meta name=viewport content="width=device-width, initial-scale=1">
+<meta name=description content="Minimal HTML page to test whether this web server works.">
+<title>Test Page</title>
+<style>
+:root {
+  --background: #fff;
+  --color: #000;
+} 
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #000;
+    --color: snow;
+  }
+}
+
+body {
+  background-color: var(--background);
+  color: var(--color);
+}
+</style>
+
+<body>
+<p>Welcome to ((.Host)). The time is ((now | date "15:04:05 MST")) on ((now | date "Monday January 2, 2006")). Your IP is ((.RemoteIP)).
+<p>This server, named {{ ansible_hostname }}, is running the {{ ansible_distribution }} distribution in the {{ ansible_os_family }} OS family.
