--- a/roles/sunrise/templates/caddy.service.j2
+++ b/roles/sunrise/templates/caddy.service.j2
@@ -14,25 +14,51 @@
 # `caddy run` command or use the caddy-api.service file instead.
 
 [Unit]
-Description=Caddy
+Description=Caddy webserver
 Documentation=https://caddyserver.com/docs/
-After=network.target
+After=network.target network-online.target
+Wants=network-online.target systemd-networkd-wait-online.service
+StartLimitIntervalSec=14400
+StartLimitBurst=10
 
 [Service]
 ; User and group the process will run as.
 User={{ web_server_user }}
 Group={{ web_server_user }}
+Environment=XDG_DATA_HOME=/var/lib
+Environment=XDG_CONFIG_HOME=/var/lib/caddy/.config
+
 ; caddy command assumes the caddyfile adapter if filename starts with Caddyfile
 ExecStart={{ caddy_binary_location }} run --environ --config /etc/caddy/Caddyfile
 ExecReload={{ caddy_binary_location }} reload --config /etc/caddy/Caddyfile
+
+# Do not allow the process to be restarted in a tight loop. If the
+# process fails to start, something critical needs to be fixed.
+Restart=on-abnormal
+
+# Use graceful shutdown with a reasonable timeout
+KillMode=mixed
+KillSignal=SIGQUIT
 TimeoutStopSec=5s
+
 ; Raise limit for file descriptors; see `man systemd.exec` for more limit settings.
 LimitNOFILE=1048576
 LimitNPROC=512
+
+# Hardening options
 PrivateTmp=true
-ProtectSystem=full
+PrivateDevices=true
+ProtectHome=true
+ProtectSystem=strict
+ReadWritePaths=/var/lib/caddy /var/log/caddy
 ; Note that you may have to add capabilities required by any plugins in use.
+CapabilityBoundingSet=CAP_NET_BIND_SERVICE
 AmbientCapabilities=CAP_NET_BIND_SERVICE
+NoNewPrivileges=true
+ProtectKernelTunables=true
+ProtectKernelModules=true
+ProtectControlGroups=true
+LockPersonality=true
 
 [Install]
 WantedBy=multi-user.target
