--- a/roles/sunrise/templates/index.html.j2
+++ b/roles/sunrise/templates/index.html.j2
@@ -26,5 +26,5 @@ body {
 </style>
 
 <body>
-<p>Welcome to ((.Host)). The time is ((now | date "15:04:05 MST")) on ((now | date "Monday January 2, 2006")). Your IP is ((.RemoteIP)).
+<p>Welcome to ((.Host)). The time is ((now | date "15:04:05 MST")) on ((now | date "Monday January 2, 2006")). Your IP is ((.RemoteIP)), and your browser user agent is ((.Req.Header.Get "User-Agent")).
 <p>This server, named {{ ansible_hostname }}, is running the {{ ansible_distribution }} distribution in the {{ ansible_os_family }} OS family.
