browse directories, list blog posts by date
Hugo can't automatically create index files for date permalink folders,
but Caddy can list pages for you if you use the "browse" directive:
https://caddyserver.com/docs/caddyfile/directives/file_server

--- a/roles/sunrise/templates/Caddyfile.j2
+++ b/roles/sunrise/templates/Caddyfile.j2
@@ -35,6 +35,7 @@
 # Hugo sites
 www.maximumethics.dev {
 	root * /srv/maximumethics.dev/www/public
-	import boilerplate
+	encode gzip zstd
+	file_server browse
 }
 import redir-to-www maximumethics.dev
