--- a/roles/sunrise/templates/LocalCaddyfile.j2
+++ b/roles/sunrise/templates/LocalCaddyfile.j2
@@ -51,6 +51,7 @@ import redir-to-www sunrisepvd.com
 # Hugo sites
 www.maximumethics.dev {
 	root * /srv/maximumethics.dev/www/public
-	import boilerplate
+	encode gzip zstd
+	file_server browse
 }
 import redir-to-www maximumethics.dev
