update Caddyfile format, test RI site, permissions
The RI site appears to be running fine with local certs on america,
we should be able to point the domain at america now and use public
certs.

PHP wasn't working because the caddy user and the PHP user "http" were
different, so Caddy didn't have permissions to interact with PHP. We
fixed this by adding the caddy user to the http group.

Another bug that we solved manually was the Caddy service is not being
restarted after the binary is updated. We still need to trigger a
restart when the package manager updates Caddy in this role.

--- a/roles/sunrise/templates/Caddyfile.j2
+++ b/roles/sunrise/templates/Caddyfile.j2
@@ -1,6 +1,10 @@
 # global options block: https://caddyserver.com/docs/caddyfile/options
 {
-	experimental_http3
+	servers {
+		protocol {
+			experimental_http3
+		}
+	}
 	email 	{{ admin_email }}
 }
 
@@ -31,6 +35,13 @@
 }
 
 # handcoded Rhode Island site
+www.sunrisepvd.com {
+	root * /srv/sunrisepvd.com/www/public
+	import boilerplate
+	php_fastcgi unix/{{ php_fpm_unix_socket }}
+	tls internal # I don't think this works, not sure how to make it work
+}
+import redir-to-www sunrisepvd.com
 
 # Hugo sites
 www.maximumethics.dev {
