trying tls on_demand
Theoretically, on demand TLS will make the server/website work even if
the domain isn't pointing at the server yet and certs can't be fetched.
https://caddyserver.com/docs/automatic-https#on-demand-tls

--- a/roles/sunrise/templates/Caddyfile.j2
+++ b/roles/sunrise/templates/Caddyfile.j2
@@ -39,6 +39,7 @@ www.sunrisepvd.com {
 	root * /srv/sunrisepvd.com/www/public
 	import boilerplate
 	php_fastcgi unix/{{ php_fpm_unix_socket }}
+	tls on_demand
 }
 import redir-to-www sunrisepvd.com
 
