--- a/roles/sunrise/templates/Caddyfile.j2
+++ b/roles/sunrise/templates/Caddyfile.j2
@@ -39,7 +39,9 @@ www.sunrisepvd.com {
 	root * /srv/sunrisepvd.com/www/public
 	import boilerplate
 	php_fastcgi unix/{{ php_fpm_unix_socket }}
-	tls on_demand
+	tls {
+		on_demand
+	}
 }
 import redir-to-www sunrisepvd.com
 
