make roles work on Ubuntu again
I spun up a test server using Ubuntu, and I think I've fixed most of the
resulting bugs. We should be able to merge back to the "master" branch
now.

I think Apache2 being installed by default on Ubuntu may interfere with
Caddy, uninstall it. Maybe switch to a distro that doesn't install it by
default?

Our Caddy service file didn't work on Ubuntu, probably because I
enabled too many security features. Since I didn't understand the
security features I had enabled well enough to troubleshoot them, I
reverted to Caddy's default service file.

Turns out Hugo modules don't work without Go installed.

I'm no longer sure how to make public HTTPS pages on the test server.

--- a/roles/sunrise/templates/LocalCaddyfile.j2
+++ b/roles/sunrise/templates/LocalCaddyfile.j2
@@ -23,7 +23,8 @@
 
 # start site blocks
 
-# public test page
+# public test page (currently not actually public)
+# https://caddy.community/t/caddyfile-having-individual-sites-differ-from-global-options/11297
 {{ local_hostname }}.{{ test_domain }} {
 	root * /srv/{{ test_domain }}/{{ test_subdomain }}/public/
 	import boilerplate
@@ -32,7 +33,6 @@
 	templates {
 		between (( ))
 	}
-	tls	{{ admin_email }}
 }
 
 # local test page
@@ -57,6 +57,5 @@ www.maximumethics.dev {
 	root * /srv/maximumethics.dev/www/public
 	encode gzip zstd
 	file_server browse
-	tls	{{ admin_email }}
 }
 import redir-to-www maximumethics.dev
