added local tls test site to production config
If we're lazy and don't feel like spinning up a test server, we can test
a site on the production server using local TLS before deploying
publicly. (The opposite is currently not working.)

--- a/roles/sunrise/templates/Caddyfile.j2
+++ b/roles/sunrise/templates/Caddyfile.j2
@@ -23,6 +23,18 @@
 
 # start site blocks
 
+# local test page, using local certs
+{{ local_hostname }}.{{ test_domain }} {
+	root * /srv/{{ test_domain }}/{{ test_subdomain }}/public/
+	import boilerplate
+	# https://caddyserver.com/docs/caddyfile/directives/templates
+	# can't use default double curly braces b/c Ansible uses them
+	templates {
+		between (( ))
+	}
+	tls internal
+}
+
 # test page
 {{ test_subdomain }}.{{ test_domain }} {
 	root * /srv/{{ test_domain }}/{{ test_subdomain }}/public/
