enable caching with Cache-Control header
Based on code from this forum post:
https://caddy.community/t/v2-cache-cotrol-for-static-files-using-regex-replace-for-caddy-1-expire-directive/7478/2

Should consider "immutable" instead of must-revalidate:
https://bitsup.blogspot.com/2016/05/cache-control-immutable.html
"Favour immutable content for any URL that can easily change":
https://jakearchibald.com/2016/caching-best-practices/

--- a/roles/sunrise/templates/LocalCaddyfile.j2
+++ b/roles/sunrise/templates/LocalCaddyfile.j2
@@ -9,9 +9,21 @@
 }
 
 # reusable snippets: https://caddyserver.com/docs/caddyfile/concepts#snippets
+(cache-plz) {
+	@cachedFiles {
+		path *.jpg *.jpeg
+	}
+	@checkCache {
+		path *.css
+	}
+	header @cachedFiles Cache-Control "public, max-age=31536000, must-revalidate"
+	header @checkCache Cache-Control no-cache
+}
+
 (boilerplate) {
 	encode gzip zstd
 	file_server
+	import cache-plz
 }
 
 # redirect no-www to www
@@ -33,6 +45,7 @@
 	templates {
 		between (( ))
 	}
+	tls {{ admin_email }}
 }
 
 # local test page
@@ -57,5 +70,6 @@ www.maximumethics.dev {
 	root * /srv/maximumethics.dev/www/public
 	encode gzip zstd
 	file_server browse
+	import cache-plz
 }
 import redir-to-www maximumethics.dev
