--- a/roles/sunrise/templates/index.html.j2
+++ b/roles/sunrise/templates/index.html.j2
@@ -18,4 +18,11 @@ This
 {%- else %}
  production
 {%- endif %}
- server, named {{ ansible_hostname }}, is running the {{ ansible_distribution }} distribution in the {{ ansible_os_family }} OS family.
+ server, named {{ ansible_hostname }}
+{%- if ansible_hostname == "america" %}
+ 🇺🇸
+{%- elif ansible_hostname == "banana" %}
+ 🍌
+{%- else %}
+{%- endif -%}
+, is running the {{ ansible_distribution }} distribution in the {{ ansible_os_family }} OS family.
