--- a/roles/sunrise/templates/index.html.j2
+++ b/roles/sunrise/templates/index.html.j2
@@ -9,6 +9,8 @@
 <link rel=icon href=data:,>
 
 <body>
+<main>
+<h1>Test Page</h1>
 <p>
 Welcome to ((.Host)). The time is ((now | date "15:04:05 MST")) on ((now | date "Monday January 2, 2006")). Your IP is ((.RemoteIP)), and your browser user agent is ((.Req.Header.Get "User-Agent")).
 <p>
@@ -26,3 +28,4 @@ This
 {%- else %}
 {%- endif -%}
 , is running the {{ ansible_distribution }} distribution in the {{ ansible_os_family }} OS family.
+</main>
