--- a/roles/sunrise/templates/Caddyfile.j2
+++ b/roles/sunrise/templates/Caddyfile.j2
@@ -93,7 +93,7 @@ www.maximumethics.dev {
 	import cache-plz
 	import error-response
 	header {
-		Content-Security-Policy: "default-src 'none'; img-src 'self' https://i.ytimg.com https://skyfaller.goatcounter.com; script-src https://gc.zgo.at/count.v1.js; style-src 'self'; frame-ancestors 'none'; base-uri 'none'; form-action 'none'"
+		Content-Security-Policy: "default-src 'none'; img-src 'self' https://i.ytimg.com https://skyfaller.goatcounter.com; script-src https://gc.zgo.at/count.v1.js 'unsafe-inline'; style-src 'self' 'unsafe-inline'; frame-ancestors 'none'; base-uri 'none'; form-action 'none'"
 		X-Content-Type-Options: "nosniff"
 	}
 }
