cache webp files too
We've started using generated webp images in our Hugo theme, so we might
as well start caching them. If we change the files or image dimensions I
suspect the generated file name will change.

--- a/roles/sunrise/templates/Caddyfile.j2
+++ b/roles/sunrise/templates/Caddyfile.j2
@@ -11,7 +11,7 @@
 # reusable snippets: https://caddyserver.com/docs/caddyfile/concepts#snippets
 (cache-plz) {
 	@cachedFiles {
-		path *.jpg *.jpeg
+		path *.jpg *.jpeg *.webp
 	}
 	@checkCache {
 		path *.css
