--- a/roles/sunrise/templates/LocalCaddyfile.j2
+++ b/roles/sunrise/templates/LocalCaddyfile.j2
@@ -11,7 +11,7 @@
 # reusable snippets: https://caddyserver.com/docs/caddyfile/concepts#snippets
 (cache-plz) {
 	@cachedFiles {
-		path *.jpg *.jpeg
+		path *.jpg *.jpeg *.webp
 	}
 	@checkCache {
 		path *.css
