--- a/roles/sunrise/templates/index.html.j2
+++ b/roles/sunrise/templates/index.html.j2
@@ -10,7 +10,15 @@
 
 <body>
 <main>
-<h1>Test Page</h1>
+<h1>Test Page
+{%- if ansible_hostname == "america" %}
+ 🦅
+{%- elif ansible_hostname == "banana" %}
+ 🍌
+{%- elif ansible_hostname == "dragon" %}
+ 🐉
+{%- endif -%}
+</h1>
 <p>
 Welcome to ((.Host)). The time is ((now | date "15:04:05 MST")) on ((now | date "Monday January 2, 2006")). Your IP is ((.RemoteIP)), and your browser user agent is ((.Req.Header.Get "User-Agent")).
 <p>
@@ -20,12 +28,5 @@ This
 {%- else %}
  production
 {%- endif %}
- server, named {{ ansible_hostname }}
-{%- if ansible_hostname == "america" %}
- 🦅
-{%- elif ansible_hostname == "banana" %}
- 🍌
-{%- else %}
-{%- endif -%}
-, is running the {{ ansible_distribution }} distribution in the {{ ansible_os_family }} OS family.
+ server, named {{ ansible_hostname }}, is running the {{ ansible_distribution }} distribution in the {{ ansible_os_family }} OS family.
 </main>
